Prevent focusable jump-to-content button when mobile flyout is active

--- a/less/core/accessibility.less
+++ b/less/core/accessibility.less
@@ -45,3 +45,11 @@
     clip: auto;
   }
 }
+
+// Prevent focusable jump-to-content button when mobile flyout is active.
+
+@media (max-width: @mobile-breakpoint) {
+  .sr-only[href="#content"] {
+    visibility: hidden;
+  }
+}
